@@ -1,4 +1,9 @@
 /develop
+    + Bug fix.  BoundMapping.Assignables() did not work as expected when attempting to Scan()
+        results from a database query that returned NULL for columns even if the destination struct
+        field was a pointer.  The error was the previous implementation always follows and instantiates
+        pointers so the Scan() was receiving a *T when it required a **T.
+
 0.2.2
     + Add go.mod
 
